Example7-complete-aws/main.tf
provider "aws" {
  region = "us-east-1"
}

# 1 Create VPN

variable "subnet_cidr_block" {
  description = "CIDR block value for VPC"
}

resource "aws_vpc" "prod-vpc" {
  cidr_block = var.subnet_cidr_block
  tags = {
    "Name" = "Production"
  }
}

# 2 Create Internet Gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id
}

# 3 Create Custom Route Table

resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "Prod"
  }
}

# 4 Create a Subnet

resource "aws_subnet" "subnet-1" {
  vpc_id            = aws_vpc.prod-vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    "Name" = "prod-subnet"
  }
}

# 5 Associate Subnet with Route Table

resource "aws_route_table_association" "route-table-association" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6 Create Security Group to allow port 22,80,443

resource "aws_security_group" "allow_web" {
  name        = "allow web traffic"
  description = "Allow web traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

# 7 Create a network interface with an ip in the subnet that was created in step 4

resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"] //can give a list here
  security_groups = [aws_security_group.allow_web.id]

}

# 8 Assign an elastic IP to the network interface created in step 7

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = ["aws_internet_gateway.gw"]
}

# 9 Create Ubuntu server and install/enable apache

resource "aws_instance" "web-server-instance" {
  ami               = "ami-085925f297f89fce1"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1a"
  key_name          = "main-key"

  network_interface {
    device_index         = 0
    network_interface_id = aws_network_interface.web-server-nic.id
  }
  user_data = <<-EOF
          #!/bin/bash
          sudo apt update - y
          sudo apt install apache2 -y
          sudo systemctl start apache2
          sudo bash -c "echo your very first web server > /var/www/html/index.html"
          EOF
  tags = {
    "Name" = "web-server"
  }
}

// terraform plan
// terraform apply --auto-approve
// terraform destroy
// terraform state list
// terraform state show {resource_name}
// terraform destroy -target {resource_name}
// terraform -target {resource_name} apply
